--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="navigation-bar">
+        <nav>
+            <ul>
+                <li>
+                    Newsletter
+                </li>
+                <li>
+                    contact us// Dropwdown menu here nicely made //
+                </li>
+            </ul>
+        </nav>
+    </div>
+    <div class="scroll_section">
+        <div class="title">
+            <h1>1. Ezzlearning</h1>
+        </div>
+        <div class="subtitle">
+           1.1 welcome to the platform that provides you the best possible student resources pack
+        </div>
+        <div class="description">
+            <h1 class="about_the_site">
+               2. About the site
+            </h1>
+            <p class="des">2.1 Ezzlearning is a platform which makes easier for student to get to know about the resources from which they can learn their desired courses in a better way and from a better platform.And in case you are already know well enough to guide others we are more than happy to welcome you aboard.
+            </p>
+            <h2 class="benefit">
+                3.Who can access and get benefited from it!?
+            </h2>
+            <p class="benefit_des">
+                3.1 Congratulations You fall into the category of beneficiary ,haha the beauty of it is that it's for every age group as learning stops.
+            </p>
+        </div>
+        <div class="getstarted">
+            <p>
+                4. So if you are ready to get started to learn you are invited to 'Get Started' with us.....
+            </p>
+            <button>4.1 Get Started -></button>
+        </div>
+    </div>
+    <div class="Aboutt_us">
+        <h1 class="conatct_info">
+            About Info
+        </h1>
+        <div class="nitya_bhanu">
+            <img src="#" alt="Nitya Bhanu">
+            Nitya Bhanu here
+        </div>
+        <div class="ryoshi">
+            <img src="#" alt="Ryoshi a.k.a Ashish">
+            Ryoshi bro here
+        </div>
+    </div>
+</body>
+</html>
