--- a/web_dev.html
+++ b/web_dev.html
@@ -1,34 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/WEB DEVELOPMENT.css">
-    <title>WEB DEVELOPMENT</title>
+    <link rel="stylesheet" href="css/topic.css">
+    <title>Web-dev</title>
 </head>
+
 <body>
-    <div class="head"><h1>WEB DEVELOPMENT</h1></div>
-    <div class="sidebar">
-          <ul>
-              <li><a>youtube course</a></li>
-              <li><a>youtube course</a></li>
-              <li><a>youtube course</a></li>
-              <li><a>youtube course</a></li>
-              <li><a>youtube course</a></li>
-          </ul>
+    <div class="head">
+        <h1>Web.dev</h1>
     </div>
-    <div class="right">
-        <div class="glasses">
-              <div class="tip1">pro-tip1</div>
-              <div class="tip2">pro-tip2</div>
+    <div class="main">
+        <div class="sidebar">
+            <ul>
+                <li><a onclick="toggle1()">Road Map</a></li>
+                <li><a onclick="toggle2()">youtube courses</a></li>
+                <li><a onclick="toggle3()">Paid courses</a></li>
+                <li><a onclick="toggle4()">Documentation</a></li>
+                <li><a onclick="toggle5()">Practice</a></li>
+            </ul>
         </div>
-         <div class="quote">
-              "A user interface is like a joke. If you have to explain it, it’s not that good."
-         </div>
-         <div class="images_icon">
-             <img src="#" alt="ACCODING TO THE PAGE WE PUT THE IMAGE">
-         </div>
+        <div class="middle">
+            <ul>
+                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Topics</a></li>
+                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Road Map</a></li>
+                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Guide</a></li>
+                
+                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Apna College</a></li>
+                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Love Babbar</a></li>
+                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Anuj Bhaiya</a></li>
+                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Striver</a></li>
+
+                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Abdul Bari</a></li>
+                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">DSA with Python</a></li>
+                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">GFG Self paced</a></li>
+                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Harvard CS50</a></li>
+                
+                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">W3School</a></li>                
+                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">JavatPoint</a></li>
+                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">GeeksForGeeks</a></li>
+                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">TutorialsPoint</a></li>
+
+                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">CodeChef</a></li>
+                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Hackerrank</a></li>
+                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Leetcode</a></li>
+                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">CodeForces</a></li>
+            </ul>
+        </div>
+        <div class="right">
+            <div class="glasses">
+                <div class="tip">pro-tip1</div>
+                <div class="tip">pro-tip2</div>
+            </div>
+            <div class="qoute">
+                <img src="https://avatars.githubusercontent.com/u/8798027?v=4" alt="IMAGE">
+                <h4>
+                    Expert Advice:<br><br>
+                    "A user interface is like a joke. If you have to explain it, it’s not that
+                    good."<br><br>
+                    -Angela YU
+                </h4>
+            </div>
+        </div>
+        <div class="back">
+            <button><a href="resources.html">Home</a></button>
+        </div>
     </div>
+<script src="javascript/dsa.js"></script>
 </body>
+
 </html>
