--- a/resources.html
+++ b/resources.html
@@ -11,11 +11,16 @@
 
 <body>
     <div class="hot-topics">
-        <div class="sticky"><a href="dsa.html">DSA</a></div>
-        <div class="sticky"><a href="web_dev.html">Web Dev</a></div>
-        <div class="sticky"><a href="app_development.html">App Dev</a></div>
-        <div class="sticky"><a href="artificial_learning.html">AI</a></div>
-        <div class="sticky"><a href="machine_learning.html">ML</a></div>
+        <div class="sticky app"><a href="app_development.html">App Dev</a></div>
+        <div class="light app"><a href="dsa.html"></a></div>
+        <div class="sticky web"><a href="web_dev.html">Web Dev</a></div>
+        <div class="light web"><a href="dsa.html"></a></div>
+        <div class="sticky dsa"><a href="dsa.html">DSA</a></div>
+        <div class="light dsa"><a href="dsa.html"></a></div>
+        <div class="sticky ai"><a href="artificial_learning.html">AI</a></div>
+        <div class="light ai"><a href="dsa.html"></a></div>
+        <div class="sticky ml"><a href="machine_learning.html">ML</a></div>
+        <div class="light ml"><a href="dsa.html"></a></div>
     </div>
     <div class="extra">
         <h1>Extra Topics</h1>
