--- a/resources.html
+++ b/resources.html
@@ -2,35 +2,60 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/resource.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/resource.css" />
     <title>Resources</title>
 </head>
 
 <body>
+    <div id="foo" class="ball"></div>
     <div class="hot-topics">
-        <div class="sticky app"><a href="app_development.html">App Dev</a></div>
-        <div class="light app"><a href="dsa.html"></a></div>
-        <div class="sticky web"><a href="web_dev.html">Web Dev</a></div>
-        <div class="light web"><a href="dsa.html"></a></div>
-        <div class="sticky dsa"><a href="dsa.html">DSA</a></div>
-        <div class="light dsa"><a href="dsa.html"></a></div>
-        <div class="sticky ai"><a href="artificial_learning.html">AI</a></div>
-        <div class="light ai"><a href="dsa.html"></a></div>
-        <div class="sticky ml"><a href="machine_learning.html">ML</a></div>
-        <div class="light ml"><a href="dsa.html"></a></div>
+        <div class="right_sticky">
+            <div class="sticky_1">
+                <a href="dsa.html">Data Structure and Algorithms</a>
+            </div>
+            <div class="light dsa"><a href="dsa.html"></a></div>
+            <div class="sticky_2">
+                <a href="web_dev.html">Web Development</a>
+            </div>
+            <div class="light web"><a href="dsa.html"></a></div>
+            <div class="sticky_3">
+                <a href="app_development.html">App Development</a>
+            </div>
+            <div class="light app"><a href="dsa.html"></a></div>
+        </div>
+        <div class="left_sticky">
+            <div class="sticky_4">
+                <a href="artificial_learning.html">Artificial Intelligence</a>
+            </div>
+            <div class="light ai"><a href="dsa.html"></a></div>
+            <div class="sticky_5">
+                <a href="machine_learning.html">Machine learning</a>
+            </div>
+            <div class="light ml"><a href="dsa.html"></a></div>
+            <div class="sticky_6">
+                <a href="vector_learning.html">Vector Art</a>
+            </div>
+            <div class="light vector"><a href="dsa.html"></a></div>
+        </div>
     </div>
     <div class="extra">
-        <h1>Extra Topics</h1>
-        <ul>
-            <li><a href="#">>Video-Editing</a></li>
-            <li><a href="#">>Graphic-Designing</a></li>
-            <li><a href="#">>Crypto-currency</a></li>
-            <li><a href="#">>Marketing</a></li>
-        </ul>
+        <div class="flip-box-inner">
+            <div class="flip-box-front">
+                <h3>EXTRA TOPICS</h3>
+            </div>
+            <div class="flip-box-back">
+                <ul>
+                    <li><a href="#">Video-Editing</a></li>
+                    <li><a href="#">Graphic-Designing</a></li>
+                    <li><a href="#">Crypto-currency</a></li>
+                    <li><a href="#">Marketing</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
+    <script src="javascript/resources.js"></script>
 </body>
-
 </html>
