--- a/index.html
+++ b/index.html
@@ -1,63 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/landing.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@400;700&family=Dosis:wght@200;600&family=Raleway:wght@100;500&family=Roboto+Condensed:wght@300;700&display=swap"
+        rel="stylesheet">
+    <title>Landing</title>
 </head>
+
 <body>
+    <div id="foo" class="ball"></div>
+
     <div class="navigation-bar">
         <nav>
             <ul>
-                <li>
-                    Newsletter
-                </li>
-                <li>
-                    contact us// Dropwdown menu here nicely made //
-                </li>
+                <li>Newsletter</li>
+                <li>EzzPool</li>
             </ul>
         </nav>
     </div>
-    <div class="scroll_section">
-        <div class="title">
-            <h1>1. Ezzlearning</h1>
-        </div>
-        <div class="subtitle">
-           1.1 welcome to the platform that provides you the best possible student resources pack
-        </div>
-        <div class="description">
-            <h1 class="about_the_site">
-               2. About the site
-            </h1>
-            <p class="des">2.1 Ezzlearning is a platform which makes easier for student to get to know about the resources from which they can learn their desired courses in a better way and from a better platform.And in case you are already know well enough to guide others we are more than happy to welcome you aboard.
-            </p>
-            <h2 class="benefit">
-                3.Who can access and get benefited from it!?
-            </h2>
-            <p class="benefit_des">
-                3.1 Congratulations You fall into the category of beneficiary ,haha the beauty of it is that it's for every age group as learning stops.
-            </p>
-        </div>
-        <div class="getstarted">
-            <p>
-                4. So if you are ready to get started to learn you are invited to 'Get Started' with us.....
-            </p>
-            <button>4.1 Get Started -></button>
+
+    <div class="box" id="my-scrollbar">
+        <div data-scroll-container id="scrollable">
+            <div data-scroll-section>
+
+                <p class="heading" id="welcome">Ezzlearning</p>
+                <p data-scroll data-scroll-speed="-2">
+                    welcome to the platform that provides you the best
+                    possible student resources pack
+                </p>
+
+                <section class="spacer"></section>
+
+                <p class="heading" id="description1" data-scroll data-scroll-speed="1">About the site</p>
+                <p data-scroll data-scroll-speed="4" data-scroll-class="fade">
+                    Ezzlearning is a platform which makes easier for student to get to
+                    know about the resources from which they can learn their desired
+                    courses in a better way and from a better platform.And in case you
+                    are already know well enough to guide others we are more than
+                    happy to welcome you aboard.
+                </p>
+
+                <section class="spacer"></section>
+
+                <p class="heading" id="description2" data-scroll data-scroll-speed="1" data-scroll-target="#scrollable">
+                    Who can access and get benefited
+                    from it!?</p>
+                <p data-scroll data-scroll-speed="3" data-scroll-target="#scrollable" data-scroll-class="fade">
+                    Congratulations You fall into the category of beneficiary ,
+                    haha the beauty of it is that
+                    it's for every age group as learning stops.
+                </p>
+
+                <section class="spacer"></section>
+
+                <p class="heading" id="getStart">Getting Started</p>
+                <p data-scroll-class="fade">
+                    So if you are ready to get started to learn you are
+                    invited to 'Get Started' with us.....
+                </p>
+                <a href="resources.html" class="get-link"><button class="get" data-scroll data-scroll-direction="horizontal" data-scroll-speed="3"
+                    data-scroll-target="#scrollable">Get Started</button></a>
+
+            </div>
         </div>
     </div>
-    <div class="Aboutt_us">
-        <h1 class="conatct_info">
-            About Info
-        </h1>
-        <div class="nitya_bhanu">
-            <img src="#" alt="Nitya Bhanu">
-            Nitya Bhanu here
-        </div>
-        <div class="ryoshi">
-            <img src="#" alt="Ryoshi a.k.a Ashish">
-            Ryoshi bro here
+
+    <div class="About_us" id="About_us">
+        <div class="names">
+
+            <div class="profile">
+                <div class="profile_left">
+                    <img src="images/nitya.jpeg">
+                </div>
+                <div class="profile_right">
+                    <div class="name">Nitya</div>
+                    <p>Graphic Designer, Vector Artist, Web designer</p>
+                    <div class="logo">
+                        <a href="https://github.com/nitya-bhanu" target="_blank"><img
+                                src="images/github.png" class="social"></a>
+                        <a href="https://www.linkedin.com/in/nitya-bhanu-gogawat-0365b2204/"
+                            target="_blank"><img src="images/linkedIn.png" class="social"></a>
+                        <a href="https://mail.google.com/mail/u/?authuser=ashishmohite16052@gmail.com"
+                            target="_blank"><img src="images/gmail.png" class="social"></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="profile">
+                <div class="profile_left">
+                    <img src="images/ashish.jpeg">
+                </div>
+                <div class="profile_right">
+                    <div class="name">Ashish</div>
+                    <p>Web Designer, Video editor, Open Source</p>
+                    <div class="logo">
+                        <a href="https://github.com/ashish16052" target="_blank"><img
+                                src="images/github.png" class="social"></a>
+                        <a href="https://www.linkedin.com/in/ashish-s-mohite/" target="_blank"><img
+                                src="images/linkedIn.png" class="social"></a>
+                        <a href="https://mail.google.com/mail/u/?authuser=ashishmohite16052@gmail.com"
+                            target="_blank"><img src="images/gmail.png" class="social"></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+
+    <script src="https://unpkg.com/smooth-scrollbar@8.7.0/dist/smooth-scrollbar.js"></script>
+    <script src="javascript/scroll.min.js"></script>
+    <script src="javascript/landing.js"></script>
 </body>
+
 </html>
