--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/landing.css">
+    <link rel="stylesheet" href="css/landing1.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -73,6 +73,7 @@
     </div>
 
     <div class="About_us" id="About_us">
+        <p class="discord">Be a part of our community: <a href="#"><img src="images/discord.png"></a></p>
         <div class="names">
 
             <div class="profile">
@@ -115,7 +116,7 @@
 
     <script src="https://unpkg.com/smooth-scrollbar@8.7.0/dist/smooth-scrollbar.js"></script>
     <script src="javascript/scroll.min.js"></script>
-    <script src="javascript/landing.js"></script>
+    <script src="javascript/landing1.js"></script>
 </body>
 
 </html>
