--- a/resources.html
+++ b/resources.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/resource.css" />
+    <link rel="stylesheet" href="css/resources.css" />
     <title>Resources</title>
 </head>
 
@@ -28,11 +28,11 @@
         </div>
         <div class="left_sticky">
             <div class="sticky_4">
-                <a href="artificial_learning.html">Artificial Intelligence</a>
+                <a href="machine_learning.html">AI and ML</a>
             </div>
             <div class="light ai"><a href="dsa.html"></a></div>
             <div class="sticky_5">
-                <a href="machine_learning.html">Machine learning</a>
+                <a href="Video_editing.html">Video Editing</a>
             </div>
             <div class="light ml"><a href="dsa.html"></a></div>
             <div class="sticky_6">
@@ -48,7 +48,7 @@
             </div>
             <div class="flip-box-back">
                 <ul>
-                    <li><a href="#">Video-Editing</a></li>
+                    <li><a href="#">UI and UX</a></li>
                     <li><a href="#">Graphic-Designing</a></li>
                     <li><a href="#">Crypto-currency</a></li>
                     <li><a href="#">Marketing</a></li>
@@ -56,6 +56,9 @@
             </div>
         </div>
     </div>
-    <script src="javascript/resources.js"></script>
+    <div class="entertainment_link">
+        <a href="entertainment.html"><p>Entertainment</p></a>
+    </div>
+    <script src="js/resources.js"></script>
 </body>
 </html>
