--- a/resources.html
+++ b/resources.html
@@ -59,6 +59,6 @@
     <div class="entertainment_link">
         <a href="entertainment.html"><p>Entertainment</p></a>
     </div>
-    <script src="js/resources.js"></script>
+    <script src="javascript/resources.js"></script>
 </body>
 </html>
