--- a/entertainment.html
+++ b/entertainment.html
@@ -98,7 +98,7 @@
       </div>
     </div>
   </div>
-  <script src="js/scroll.min.js"></script>
-  <script src="js/entertainment.js"></script>
+  <script src="javascript/scroll.min.js"></script>
+  <script src="javascript/entertainment.js"></script>
 </body>
 </html>
