--- a/artificial_learning.html
+++ b/artificial_learning.html
@@ -6,13 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/topic.css">
-    <title>artificial-intelligence</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@400;700&family=Dosis:wght@200;600&family=Raleway:wght@100;500&family=Roboto+Condensed:wght@300;700&display=swap"
+        rel="stylesheet">
+    <title>AI/ML</title>
 </head>
 
 <body>
-    <div class="head">
-        <h1>artificial.intelligence</h1>
-    </div>
     <div class="main">
         <div class="sidebar">
             <ul>
@@ -25,36 +27,27 @@
         </div>
         <div class="middle">
             <ul>
-                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Topics</a></li>
-                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Road Map</a></li>
-                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Guide</a></li>
+                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://i.am.ai/roadmap" target="_blank">AI Roadmap</a></li>
+                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://whimsical.com/machine-learning-roadmap-2020-CA7f3ykvXpnJ9Az32vYXva" target="_blank">ML RoadMap</a></li>
                 
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Apna College</a></li>
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Love Babbar</a></li>
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Anuj Bhaiya</a></li>
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Striver</a></li>
+                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://youtube.com/playlist?list=PLu0W_9lII9ai6fAMHp-acBmJONT7Y4BSG" target="_blank">Code With Harry</a></li>
+                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://youtube.com/playlist?list=PLUl4u3cNGP63gFHB6xb-kVBiQHYe_4hSi" target="_blank">MIT</a></li>
+                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://youtube.com/playlist?list=PLZoTAELRMXVPBTrWtJkn3wWQxZkmTXGwe" target="_blank">Krish Naik</a></li>
 
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Abdul Bari</a></li>
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">DSA with Python</a></li>
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">GFG Self paced</a></li>
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Harvard CS50</a></li>
+                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.coursera.org/specializations/jhu-data-science" target="_blank">Jeff leek Data science</a></li>
+                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.coursera.org/specializations/data-science-python" target="_blank">Applied Data science</a></li>
+                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.udemy.com/course/machinelearning/" target="_blank">ML A-Z</a></li>
                 
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">W3School</a></li>                
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">JavatPoint</a></li>
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">GeeksForGeeks</a></li>
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">TutorialsPoint</a></li>
+                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.w3schools.com/ai/" target="_blank">W3School</a></li>                
+                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.javatpoint.com/artificial-intelligence-tutorial" target="_blank">JavatPoint</a></li>
+                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.tutorialspoint.com/artificial_intelligence/index.htm" target="_blank">TutorialsPoint</a></li>
 
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">CodeChef</a></li>
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Hackerrank</a></li>
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Leetcode</a></li>
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">CodeForces</a></li>
+                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.interviewbit.com/artificial-intelligence-interview-questions/" target="_blank">interviewbit</a></li>
+                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.javatpoint.com/machine-learning-interview-questions" target="_blank">JavatPoint</a></li>
             </ul>
         </div>
         <div class="right">
-            <div class="glasses">
-                <div class="tip">pro-tip1</div>
-                <div class="tip">pro-tip2</div>
-            </div>
+            <h1>AI/ML</h1>
             <div class="qoute">
                 <img src="https://avatars.githubusercontent.com/u/8798027?v=4" alt="IMAGE">
                 <h4>
