--- a/app_development.html
+++ b/app_development.html
@@ -6,13 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/topic.css">
-    <title>app-dev</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@400;700&family=Dosis:wght@200;600&family=Raleway:wght@100;500&family=Roboto+Condensed:wght@300;700&display=swap"
+        rel="stylesheet">
+    <title>App Development</title>
 </head>
 
 <body>
-    <div class="head">
-        <h1>app.dev</h1>
-    </div>
     <div class="main">
         <div class="sidebar">
             <ul>
@@ -25,36 +27,30 @@
         </div>
         <div class="middle">
             <ul>
-                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Topics</a></li>
-                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Road Map</a></li>
-                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Guide</a></li>
+                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://roadmap.sh/android" target="_blank">Road Map</a></li>
+                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://hackernoon.com/a-roadmap-to-application-development-bfa2e32fcd82" target="_blank">Guide</a></li>
                 
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Apna College</a></li>
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Love Babbar</a></li>
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Anuj Bhaiya</a></li>
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Striver</a></li>
+                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://youtube.com/playlist?list=PLu0W_9lII9aiL0kysYlfSOUgY5rNlOhUd" target="_blank">Code With Harry</a></li>
+                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://youtube.com/playlist?list=PL6Q9UqV2Sf1gHCHOKYLDofElSvxtRRXOR" target="_blank">Master Coding</a></li>
+                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://youtube.com/playlist?list=PLUcsbZa0qzu3Mri2tL1FzZy-5SX75UJfb" target="_blank">Anuj Bhaiya</a></li>
 
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Abdul Bari</a></li>
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">DSA with Python</a></li>
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">GFG Self paced</a></li>
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Harvard CS50</a></li>
+                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.udemy.com/course/ios-13-app-development-bootcamp/" target="_blank">Angela Yu</a></li>
+                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.udemy.com/course/learn-flutter-dart-to-build-ios-android-apps/" target="_blank">Flutter</a></li>
+                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.edx.org/professional-certificate/harvardx-computer-science-and-mobile-apps" target="_blank">HarvardX</a></li>
                 
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">W3School</a></li>                
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">JavatPoint</a></li>
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">GeeksForGeeks</a></li>
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">TutorialsPoint</a></li>
+                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://developer.android.com/training/basics/firstapp" target="_blank">Developers</a></li>                
+                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.javatpoint.com/android-tutorial" target="_blank">JavatPoint</a></li>
+                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.geeksforgeeks.org/android-tutorial/" target="_blank">geeksforgeeks</a></li>
+                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.tutorialspoint.com/mobile_development_tutorials.htm" target="_blank">TutorialsPoint</a></li>
 
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">CodeChef</a></li>
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Hackerrank</a></li>
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">Leetcode</a></li>
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="#">CodeForces</a></li>
+                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.codechef.com/" target="_blank">CodeChef</a></li>
+                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.hackerrank.com/" target="_blank">Hackerrank</a></li>
+                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://leetcode.com/" target="_blank">Leetcode</a></li>
+                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://codeforces.com/" target="_blank">CodeForces</a></li>
             </ul>
         </div>
         <div class="right">
-            <div class="glasses">
-                <div class="tip">pro-tip1</div>
-                <div class="tip">pro-tip2</div>
-            </div>
+            <h1>App Development</h1>
             <div class="qoute">
                 <img src="https://avatars.githubusercontent.com/u/8798027?v=4" alt="IMAGE">
                 <h4>
