--- a/resources.html
+++ b/resources.html
@@ -28,7 +28,7 @@
         </div>
         <div class="left_sticky">
             <div class="sticky_4">
-                <a href="machine_learning.html">AI and ML</a>
+                <a href="artificial_learning.html">AI and ML</a>
             </div>
             <div class="light ai"><a href="dsa.html"></a></div>
             <div class="sticky_5">
