--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <script src="https://unpkg.com/smooth-scrollbar@8.7.0/dist/smooth-scrollbar.js"></script>
     <script src="javascript/scroll.min.js"></script>
-    <script src="javascript/landing1.js"></script>
+    <script src="javascript/landing.js"></script>
 </body>
 
 </html>
