--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="navigation-bar">
         <nav>
             <ul>
-                <li>Newsletter</li>
+                <li><a href="https://newsletter-nitya-ryoshi.herokuapp.com/">Newsletter</a></li>
                 <li>EzzPool</li>
             </ul>
         </nav>
