--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="navigation-bar">
         <nav>
             <ul>
-                <li><a href="https://newsletter-nitya-ryoshi.herokuapp.com/">Newsletter</a></li>
-                <li>EzzPool</li>
+                <li><a href="https://newsletter-nitya-ryoshi.herokuapp.com">Newsletter</a></li>
+                <li><a>EzzPool</a></li>
             </ul>
         </nav>
     </div>
