--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="logo">
                         <a href="https://github.com/nitya-bhanu" target="_blank"><img
                                 src="images/github.png" class="social"></a>
-                        <a href="https://www.linkedin.com/in/nitya-bhanu-gogawat-0365b2204/"
+                        <a href="https://www.Linkedin.com/in/nitya-bhanu-gogawat-0365b2204/"
                             target="_blank"><img src="images/linkedIn.png" class="social"></a>
                         <a href="https://mail.google.com/mail/u/?authuser=ashishmohite16052@gmail.com"
                             target="_blank"><img src="images/gmail.png" class="social"></a>
@@ -105,7 +105,7 @@
                         <a href="https://github.com/ashish16052" target="_blank"><img
                                 src="images/github.png" class="social"></a>
                         <a href="https://www.linkedin.com/in/ashish-s-mohite/" target="_blank"><img
-                                src="images/linkedIn.png" class="social"></a>
+                                src="images/LinkedIn.png" class="social"></a>
                         <a href="https://mail.google.com/mail/u/?authuser=ashishmohite16052@gmail.com"
                             target="_blank"><img src="images/gmail.png" class="social"></a>
                     </div>
