--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                     <div class="logo">
                         <a href="https://github.com/nitya-bhanu" target="_blank"><img
                                 src="images/github.png" class="social"></a>
-                        <a href="https://www.Linkedin.com/in/nitya-bhanu-gogawat-0365b2204/"
-                            target="_blank"><img src="images/linkedIn.png" class="social"></a>
+                        <a href="https://www.linkedin.com/in/nitya-bhanu-gogawat-0365b2204/"
+                            target="_blank"><img src="images/LinkedIn.png" class="social"></a>
                         <a href="https://mail.google.com/mail/u/?authuser=ashishmohite16052@gmail.com"
                             target="_blank"><img src="images/gmail.png" class="social"></a>
                     </div>
