--- a/entertainment.html
+++ b/entertainment.html
@@ -1,104 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/alt_entertainment.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <title>ENTERTAINMENT PAGE</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/entertainment1.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@400;700&family=Dosis:wght@200;600&family=Raleway:wght@100;500&family=Roboto+Condensed:wght@300;700&display=swap"
-    rel="stylesheet">
-  <title>ENTERTAINMENT PAGE</title>
-</head>
-
-<body data-scroll-container id="scrollable">
-
-  <div class="main_starting_circle">
-    <h1>Entertainment Page</h1>
-  </div>
-  <div class="mid_heading_circles">
-    <div class="animes" data-scroll data-scroll-direction="horizontal" data-scroll-speed="18"
-      data-scroll-target="#scrollable">
-      <a onclick="move_shit1()">ANIMES</a>
+  <body data-scroll-container id="scrollable">
+    <div class="main_starting_circle">
+      <h1>Entertainment Page</h1>
     </div>
-    <div class="movies" class="animes" data-scroll data-scroll-direction="horizontal" data-scroll-speed="10"
-      data-scroll-target="#scrollable">
-      <a onclick="move_shit2()">MOVIES</a>
-    </div>
-    <div class="web_series" class="animes" data-scroll data-scroll-direction="horizontal" data-scroll-speed="-10"
-      data-scroll-target="#scrollable">
-      <a onclick="move_shit3()">WEB SERIES</a>
-    </div>
-    <div class="games_and_softwares" class="animes" data-scroll data-scroll-direction="horizontal"
-      data-scroll-speed="-18" data-scroll-target="#scrollable">
-      <a onclick="move_shit4()">GAMES AND SOFTWARES</a>
-    </div>
-  </div>
-  <div class="scroll_down_stuff">
-    <div class="scroll_anime" id="scroll_anime">
-      <button class="anime_btn" onclick="show_content1()">
-        CLICK HERE
-      </button>
-    </div>
-    <div class="scroll_movies" id="scroll_movies">
-      <button class="movie_btn" onclick="show_content2()">
-        CLICK HERE
-      </button>
-    </div>
-    <div class="scroll_web_series" id="scroll_web_series">
-      <button class="web_btn" onclick="show_content3()">
-        CLICK HERE
-      </button>
-    </div>
-    <div class="scroll_games_and_resources" id="scroll_games_and_resources">
-      <button class="game_btn" onclick="show_content4()">
-        CLICK HERE
-      </button>
-    </div>
-  </div>
-  <div class="content_stuff">
-    <div class="anime_content">
-      <div class="inner_anime_content">
-        <a class="inner_anime_content1" href="https://kissanime.com.ru/">Kissanime</a>
-        <a class="inner_anime_content2" href="https://www1.gogoanime.cm/">Gogoanime</a>
-        <a class="inner_anime_content3" href="https://www.crunchyroll.com/en-gb">Crunchyroll</a>
-        <a class="inner_anime_content4" href="https://www.animedao.cc/">Animedao</a>
+    <div class="mid_heading_circles">
+      <div
+        class="animes"
+        data-scroll
+        data-scroll-direction="horizontal"
+        data-scroll-speed="18"
+        data-scroll-target="#scrollable"
+      >
+        <a onclick="move_shit1()">ANIMES</a>
+      </div>
+      <div
+        class="movies"
+        class="animes"
+        data-scroll
+        data-scroll-direction="horizontal"
+        data-scroll-speed="10"
+        data-scroll-target="#scrollable"
+      >
+        <a onclick="move_shit2()">MOVIES</a>
+      </div>
+      <div
+        class="web_series"
+        class="animes"
+        data-scroll
+        data-scroll-direction="horizontal"
+        data-scroll-speed="-10"
+        data-scroll-target="#scrollable"
+      >
+        <a onclick="move_shit3()">WEB SERIES</a>
+      </div>
+      <div
+        class="games_and_softwares"
+        class="animes"
+        data-scroll
+        data-scroll-direction="horizontal"
+        data-scroll-speed="-18"
+        data-scroll-target="#scrollable"
+      >
+        <a onclick="move_shit4()">GAMES AND SOFTWARES</a>
       </div>
     </div>
-    <div class="movie_content">
-      <div class="inner_movie_content">
-        <a class="inner_movie_content1" href="https://www.tpbproxypirate.com/">The Pirate Bay</a>
-        <a class="inner_movie_content2" href="https://www.pirateproxy-bay.com/">Pirate Proxy</a>
-        <a class="inner_movie_content3" href="https://www5.himovies.to/watch-movie/room-17491.1612725">Himovies</a>
-        <a class="inner_movie_content4" href="https://oceanofmovies.se/">Ocean of movies</a>
+    <div class="scroll_down_stuff">
+      <div class="scroll_anime" id="scroll_anime">
+        <button class="anime_btn" onclick="show_content1()">CLICK HERE</button>
+      </div>
+      <div class="scroll_movies" id="scroll_movies">
+        <button class="movie_btn" onclick="show_content2()">CLICK HERE</button>
+      </div>
+      <div class="scroll_web_series" id="scroll_web_series">
+        <button class="web_btn" onclick="show_content3()">CLICK HERE</button>
+      </div>
+      <div class="scroll_games_and_resources" id="scroll_games_and_resources">
+        <button class="game_btn" onclick="show_content4()">CLICK HERE</button>
       </div>
     </div>
-    <div class="webseries_content">
-      <div class="inner_webseries_content">
-        Websites:
-        <a class="inner_webseries_content1" href="https://www.tpbproxypirate.com/">The Pirate Bay</a>
-        <a class="inner_webseries_content2" href="https://www.pirateproxy-bay.com/">Pirate Proxy</a>
-        <a class="inner_webseries_content3" href="https://www5.himovies.to/watch-movie/room-17491.1612725">Himovies</a>
-        Telegram Links:
-        <a class="inner_webseries_content4" href="#">Link 1</a>
-        <a class="inner_webseries_content5" href="#">Link 2</a>
+    <div class="content_stuff">
+      <div class="anime_content">
+        <div class="inner_anime_content">
+          <a
+            class="inner_anime_content1"
+            href="https://kissanime.com.ru/"
+            target="_blank"
+            >Kissanime</a
+          >
+          <a
+            class="inner_anime_content2"
+            href="https://www1.gogoanime.cm/"
+            target="_blank"
+            >Gogoanime</a
+          >
+          <a
+            class="inner_anime_content3"
+            href="https://www.crunchyroll.com/en-gb"
+            target="_blank"
+            >Crunchyroll</a
+          >
+          <a
+            class="inner_anime_content4"
+            href="https://www.animedao.cc/"
+            target="_blank"
+            >Animedao</a
+          >
+        </div>
       </div>
-    </div>
-    <div class="games_content">
-      <div class="inner_games_content">
-        Games:
-        <a class="inner_games_content1" href="https://www.rgmechanics.com/">RgMechanics</a>
-        <div class="inner_software_content">
-          Softwares:
-          <a class="inner_software_content1" href="https://getintopc.com/">GetintoPC</a>
+      <div class="movie_content">
+        <div class="inner_movie_content">
+          <a
+            class="inner_movie_content1"
+            href="https://www.tpbproxypirate.com/"
+            target="_blank"
+            >The Pirate Bay</a
+          >
+          <a
+            class="inner_movie_content2"
+            href="https://www.pirateproxy-bay.com/"
+            target="_blank"
+            >Pirate Proxy</a
+          >
+          <a
+            class="inner_movie_content3"
+            href="https://www5.himovies.to/watch-movie/room-17491.1612725"
+            target="_blank"
+            >Himovies</a
+          >
+          <a
+            class="inner_movie_content4"
+            href="https://oceanofmovies.se/"
+            target="_blank"
+            >Ocean of movies</a
+          >
+        </div>
+      </div>
+      <div class="webseries_content">
+        <div class="inner_webseries_content">
+          <a
+            class="inner_webseries_content1"
+            href="https://www.tpbproxypirate.com/"
+            target="_blank"
+            >The Pirate Bay</a
+          >
+          <a
+            class="inner_webseries_content2"
+            href="https://www.pirateproxy-bay.com/"
+            target="_blank"
+            >Pirate Proxy</a
+          >
+          <a
+            class="inner_webseries_content3"
+            href="https://www5.himovies.to/watch-movie/room-17491.1612725"
+            target="_blank"
+            >Himovies</a
+          >
+          <a class="inner_webseries_content4" href="#" target="_blank"
+            >Link 1(Telegram)</a
+          >
+          <a class="inner_webseries_content5" href="#" target="_blank"
+            >Link 2(Telegram)</a
+          >
+        </div>
+      </div>
+      <div class="games_content">
+        <div class="inner_games_content">
+          Games:
+          <a
+            class="inner_games_content1"
+            href="https://www.rgmechanics.com/"
+            target="_blank"
+            >RgMechanics</a
+          >
+          <div class="inner_software_content">
+            Softwares:
+            <a
+              class="inner_software_content1"
+              href="https://getintopc.com/"
+              target="_blank"
+              >GetintoPC</a
+            >
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <script src="javascript/scroll.min.js"></script>
-  <script src="javascript/entertainment.js"></script>
-</body>
+    <script src="javascript/scroll.min.js"></script>
+    <script src="javascript/entertainment.js"></script>
+  </body>
 </html>
