--- a/artificial_learning.html
+++ b/artificial_learning.html
@@ -27,29 +27,29 @@
         </div>
         <div class="middle">
             <ul>
-                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://i.am.ai/roadmap" target="_blank">AI Roadmap</a></li>
-                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://whimsical.com/machine-learning-roadmap-2020-CA7f3ykvXpnJ9Az32vYXva" target="_blank">ML RoadMap</a></li>
+                <li class="road"><img src="images/ai/roadmap.png"><a href="https://i.am.ai/roadmap" target="_blank">AI Roadmap</a></li>
+                <li class="road"><img src="images/ai/whimsical.png"><a href="https://whimsical.com/machine-learning-roadmap-2020-CA7f3ykvXpnJ9Az32vYXva" target="_blank">ML RoadMap</a></li>
                 
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://youtube.com/playlist?list=PLu0W_9lII9ai6fAMHp-acBmJONT7Y4BSG" target="_blank">Code With Harry</a></li>
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://youtube.com/playlist?list=PLUl4u3cNGP63gFHB6xb-kVBiQHYe_4hSi" target="_blank">MIT</a></li>
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://youtube.com/playlist?list=PLZoTAELRMXVPBTrWtJkn3wWQxZkmTXGwe" target="_blank">Krish Naik</a></li>
+                <li class="youtube"><img src="images/ai/harry.jpg"><a href="https://youtube.com/playlist?list=PLu0W_9lII9ai6fAMHp-acBmJONT7Y4BSG" target="_blank">Code With Harry</a></li>
+                <li class="youtube"><img src="images/ai/mit.jpg"><a href="https://youtube.com/playlist?list=PLUl4u3cNGP63gFHB6xb-kVBiQHYe_4hSi" target="_blank">MIT</a></li>
+                <li class="youtube"><img src="images/ai/krish.jpg"><a href="https://youtube.com/playlist?list=PLZoTAELRMXVPBTrWtJkn3wWQxZkmTXGwe" target="_blank">Krish Naik</a></li>
 
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.coursera.org/specializations/jhu-data-science" target="_blank">Jeff leek Data science</a></li>
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.coursera.org/specializations/data-science-python" target="_blank">Applied Data science</a></li>
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.udemy.com/course/machinelearning/" target="_blank">ML A-Z</a></li>
+                <li class="paid"><img src="images/ai/jeff.jpg"><a href="https://www.coursera.org/specializations/jhu-data-science" target="_blank">Jeff leek Data science</a></li>
+                <li class="paid"><img src="images/ai/christopher.jpg"><a href="https://www.coursera.org/specializations/data-science-python" target="_blank">Applied Data science</a></li>
+                <li class="paid"><img src="images/ai/ml.png"><a href="https://www.udemy.com/course/machinelearning/" target="_blank">ML A-Z</a></li>
                 
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.w3schools.com/ai/" target="_blank">W3School</a></li>                
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.javatpoint.com/artificial-intelligence-tutorial" target="_blank">JavatPoint</a></li>
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.tutorialspoint.com/artificial_intelligence/index.htm" target="_blank">TutorialsPoint</a></li>
+                <li class="documentation"><img src="images/ai/w3.jpg"><a href="https://www.w3schools.com/ai/" target="_blank">W3School</a></li>                
+                <li class="documentation"><img src="images/ai/javat.png"><a href="https://www.javatpoint.com/artificial-intelligence-tutorial" target="_blank">JavatPoint</a></li>
+                <li class="documentation"><img src="images/ai/tutorial.jpg"><a href="https://www.tutorialspoint.com/artificial_intelligence/index.htm" target="_blank">TutorialsPoint</a></li>
 
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.interviewbit.com/artificial-intelligence-interview-questions/" target="_blank">interviewbit</a></li>
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.javatpoint.com/machine-learning-interview-questions" target="_blank">JavatPoint</a></li>
+                <li class="practice"><img src="images/ai/interview.png"><a href="https://www.interviewbit.com/artificial-intelligence-interview-questions/" target="_blank">interviewbit</a></li>
+                <li class="practice"><img src="images/ai/javat.png"><a href="https://www.javatpoint.com/machine-learning-interview-questions" target="_blank">JavatPoint</a></li>
             </ul>
         </div>
         <div class="right">
             <h1>AI/ML</h1>
             <div class="qoute">
-                <img src="https://avatars.githubusercontent.com/u/8798027?v=4" alt="IMAGE">
+                <img src="images/ai/angela.jpg" alt="IMAGE">
                 <h4>
                     Expert Advice:<br><br>
                     "A user interface is like a joke. If you have to explain it, it’s not that
