--- a/app_development.html
+++ b/app_development.html
@@ -27,32 +27,32 @@
         </div>
         <div class="middle">
             <ul>
-                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://roadmap.sh/android" target="_blank">Road Map</a></li>
-                <li class="road"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://hackernoon.com/a-roadmap-to-application-development-bfa2e32fcd82" target="_blank">Guide</a></li>
+                <li class="road"><img src="images/app/roadmap.png"><a href="https://roadmap.sh/android" target="_blank">Road Map</a></li>
+                <li class="road"><img src="images/app/Hackernoon.png"><a href="https://hackernoon.com/a-roadmap-to-application-development-bfa2e32fcd82" target="_blank">Guide</a></li>
                 
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://youtube.com/playlist?list=PLu0W_9lII9aiL0kysYlfSOUgY5rNlOhUd" target="_blank">Code With Harry</a></li>
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://youtube.com/playlist?list=PL6Q9UqV2Sf1gHCHOKYLDofElSvxtRRXOR" target="_blank">Master Coding</a></li>
-                <li class="youtube"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://youtube.com/playlist?list=PLUcsbZa0qzu3Mri2tL1FzZy-5SX75UJfb" target="_blank">Anuj Bhaiya</a></li>
+                <li class="youtube"><img src="images/app/harry.jpg"><a href="https://youtube.com/playlist?list=PLu0W_9lII9aiL0kysYlfSOUgY5rNlOhUd" target="_blank">Code With Harry</a></li>
+                <li class="youtube"><img src="images/app/master.jpg"><a href="https://youtube.com/playlist?list=PL6Q9UqV2Sf1gHCHOKYLDofElSvxtRRXOR" target="_blank">Master Coding</a></li>
+                <li class="youtube"><img src="images/app/anuj.jpg"><a href="https://youtube.com/playlist?list=PLUcsbZa0qzu3Mri2tL1FzZy-5SX75UJfb" target="_blank">Anuj Bhaiya</a></li>
 
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.udemy.com/course/ios-13-app-development-bootcamp/" target="_blank">Angela Yu</a></li>
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.udemy.com/course/learn-flutter-dart-to-build-ios-android-apps/" target="_blank">Flutter</a></li>
-                <li class="paid"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.edx.org/professional-certificate/harvardx-computer-science-and-mobile-apps" target="_blank">HarvardX</a></li>
+                <li class="paid"><img src="images/app/angela.jpg"><a href="https://www.udemy.com/course/ios-13-app-development-bootcamp/" target="_blank">Angela Yu</a></li>
+                <li class="paid"><img src="images/app/flutter.png"><a href="https://www.udemy.com/course/learn-flutter-dart-to-build-ios-android-apps/" target="_blank">Flutter</a></li>
+                <li class="paid"><img src="images/app/harvard.jpg"><a href="https://www.edx.org/professional-certificate/harvardx-computer-science-and-mobile-apps" target="_blank">HarvardX</a></li>
                 
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://developer.android.com/training/basics/firstapp" target="_blank">Developers</a></li>                
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.javatpoint.com/android-tutorial" target="_blank">JavatPoint</a></li>
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.geeksforgeeks.org/android-tutorial/" target="_blank">geeksforgeeks</a></li>
-                <li class="documentation"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.tutorialspoint.com/mobile_development_tutorials.htm" target="_blank">TutorialsPoint</a></li>
+                <li class="documentation"><img src="images/app/developer.jpg"><a href="https://developer.android.com/training/basics/firstapp" target="_blank">Developers</a></li>                
+                <li class="documentation"><img src="images/app/javat.png"><a href="https://www.javatpoint.com/android-tutorial" target="_blank">JavatPoint</a></li>
+                <li class="documentation"><img src="images/app/gfg.png"><a href="https://www.geeksforgeeks.org/android-tutorial/" target="_blank">geeksforgeeks</a></li>
+                <li class="documentation"><img src="images/app/tutorial.jpg"><a href="https://www.tutorialspoint.com/mobile_development_tutorials.htm" target="_blank">TutorialsPoint</a></li>
 
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.codechef.com/" target="_blank">CodeChef</a></li>
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://www.hackerrank.com/" target="_blank">Hackerrank</a></li>
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://leetcode.com/" target="_blank">Leetcode</a></li>
-                <li class="practice"><img src="https://avatars.githubusercontent.com/u/8798027?v=4"><a href="https://codeforces.com/" target="_blank">CodeForces</a></li>
+                <li class="practice"><img src="images/app/codechef.jpg"><a href="https://www.codechef.com/" target="_blank">CodeChef</a></li>
+                <li class="practice"><img src="images/app/HackerRank.png"><a href="https://www.hackerrank.com/" target="_blank">Hackerrank</a></li>
+                <li class="practice"><img src="images/app/leetcode.png"><a href="https://leetcode.com/" target="_blank">Leetcode</a></li>
+                <li class="practice"><img src="images/app/codeforces.png"><a href="https://codeforces.com/" target="_blank">CodeForces</a></li>
             </ul>
         </div>
         <div class="right">
             <h1>App Development</h1>
             <div class="qoute">
-                <img src="https://avatars.githubusercontent.com/u/8798027?v=4" alt="IMAGE">
+                <img src="images/app/angela.jpg" alt="IMAGE">
                 <h4>
                     Expert Advice:<br><br>
                     "A user interface is like a joke. If you have to explain it, it’s not that
