--- a/Graphic_designing.html
+++ b/Graphic_designing.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@400;700&family=Dosis:wght@200;600&family=Raleway:wght@100;500&family=Roboto+Condensed:wght@300;700&display=swap"
         rel="stylesheet">
-    <title>Video Editing</title>
+    <title>Vector Art</title>
 </head>
 
 <body>
